# open-sky

./: .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
app/: Dockerfile.api  app.py  historic_data.py  pyproject.toml  requirements.txt
ingestion/: .env  Dockerfile.ingest  api_auth.py  ingest.py  pyproject.toml  requirements.ingest.txt  test.py
ingestion/data/bronze/open_sky/date=2025-12-23/hour=14/: part-20251223T140401Z-000001.parquet  part-20251223T140431Z-000002.parquet  part-20251223T140501Z-000003.parquet  part-20251223T140531Z-000004.parquet  part-20251223T140601Z-000005.parquet  part-20251223T140631Z-000006.parquet  part-20251223T140701Z-000007.parquet  part-20251223T140731Z-000008.parquet  part-20251223T140801Z-000009.parquet  part-20251223T140831Z-000010.parquet  part-20251223T140901Z-000011.parquet  part-20251223T140932Z-000012.parquet  part-20251223T141001Z-000013.parquet  part-20251223T141031Z-000014.parquet  part-20251223T141102Z-000015.parquet  part-20251223T141315Z-000001.parquet  part-20251223T141345Z-000002.parquet  part-20251223T141415Z-000003.parquet  part-20251223T141445Z-000004.parquet  part-20251223T141515Z-000005.parquet  part-20251223T141545Z-000006.parquet  part-20251223T141615Z-000007.parquet  (+3 more)
ingestion/data/raw/open_sky/: snapshot-20251223T082937Z.json  snapshot-20251223T082947Z.json  snapshot-20251223T082957Z.json  snapshot-20251223T083007Z.json  snapshot-20251223T083017Z.json  snapshot-20251223T083027Z.json  snapshot-20251223T083037Z.json
loader/: Dockerfile.loader  loader.py  requirements.loader.txt
nginx/: nginx.conf
